--- a/src/pages/new-occurrence/new-occurrence.scss
+++ b/src/pages/new-occurrence/new-occurrence.scss
@@ -1,3 +1,11 @@
 page-new-occurrence {
+    .image-compare-block {
+        overflow: hidden;
 
+        .image-item {
+            float: left;
+            width: 50%;
+            height: 200px;
+        }
+    }
 }
