--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,23 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.center-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    .content-container {
+        display: table;
+        width: 100%;
+        height: 100%;
+
+        .inner-content {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+    }
+}
