--- a/src/pages/new-occurrence/new-occurrence.scss
+++ b/src/pages/new-occurrence/new-occurrence.scss
@@ -6,6 +6,11 @@ page-new-occurrence {
             float: left;
             width: 50%;
             height: 200px;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-color: #000;
+            position: relative;
         }
     }
 
