--- a/src/pages/list-of-occurrences/list-of-occurrences.scss
+++ b/src/pages/list-of-occurrences/list-of-occurrences.scss
@@ -1,5 +1,5 @@
 page-list-of-occurrences {
-    .occurences-empty-list {
+    .occurrences-empty-list {
         color: color($colors, primary);
     }
 }
