--- a/src/pages/new-occurrence/new-occurrence.scss
+++ b/src/pages/new-occurrence/new-occurrence.scss
@@ -11,6 +11,25 @@ page-new-occurrence {
             background-repeat: no-repeat;
             background-color: #000;
             position: relative;
+
+            .image-origin {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                text-align: center;
+
+                .origin-label {
+                    display: inline-block;
+                    padding: 3px 10px;
+                    background-color: #000;
+                    color: #fff;
+                    border-top: 1px solid #fff;
+                    border-left: 1px solid #fff;
+                    border-right: 1px solid #fff;
+                    font-weight: bold;
+                }
+            }
         }
     }
 
