--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
     danger:     #f53d3d,
     light:      #f4f4f4,
     dark:       #222,
-    bg:         #488aff
+    bg:         #488aff,
+    success:    #5cb85c
 );
 
 $toolbar-background: #000;
